package ThiCK.OnTap.Hong_State;

public interface ITrangThai {
    public void display();
}
